cmake_minimum_required(VERSION 3.10)

project(
  cpp-tutorial
  DESCRIPTION "Study modern cpp"
  LANGUAGES CXX)

  set(CMAKE_CXX_STANDARD 20)

  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
  
  add_subdirectory(app)
  add_subdirectory(libs)